@@ -55,13 +55,15 @@ namespace PLScript {
 *    - Global functions
 *      - C++ calls script
 *      - Script calls C++ (with namespace support)
+*    - RTTI objects
+*      - Properties
+*      - Attributes
+*      - Methods
+*      - Signals
 *
 *    Supported primitive data types: bool, float, double, int8, int16, int32, int64, uint8, uint16, uint32, uint64, PLCore::Object*
 *    Please note that not each script language/API may make such a detailed data type distinction.
 *    Because strings are fundamental within scripts, PLGeneral::String is supported as well.
-*
-*  @note
-*    - [TODO] Script support is currently under construction
 */
 class Script : public PLCore::Object {
 
